# ex5_reversi

./: .gitignore  CMakeLists.txt
exe/: client.out  client_configuration.ini  server.out  server_configuration.ini
src/client/: .makefile.swo  .makefile.swp  makefile
src/client/include/: Client.h  ConsolePrinter.h  Printer.h  ReversiGame.h
src/client/src/: Client.cpp  ConsolePrinter.cpp  LocalPlayer.cpp  RemotePlayer.cpp  ReversiGame.cpp  main.cpp
src/server/: ConsoleServerPrinter.cpp  Server.cpp  Server.h  ServerConfigParser.cpp  main.cpp  makefile
src/server/include/: ClientHandler.h  CommandManager.h  Communication.h  Convert.h  Game.h  GameManager.h  Server.h
src/server/src/: ClientHandler.cpp  Communication.cpp  Game.cpp  GameManager.cpp  Server.cpp  main.cpp
